# maya_umbrella

./: .all-contributorsrc  .coveragerc  .flake8  .gitignore  .hound.yml  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  Cargo.toml  LEUKOCYTE_VIRUS_VACCINE.md  LICENSE  README.md  README_zh.md  codecov.yml  docker-compose.test.yml  manual_test_in_maya.py  noxfile.py  pyproject.toml  requirements-dev.txt  run_maya_standalone.py  test_leukocyte_detection.py  verify_vaccine4.py
.github/workflows/: bumpversion.yml  codecov.yml  docker-integration-test.yml  maya-python27-test.yml  mr-test.yml  python-publish.yml  windows-python27-test.yml
crates/: README.md
crates/maya-umbrella/: Cargo.toml
crates/maya-umbrella-pylib/: Cargo.toml  pyproject.toml
crates/maya-umbrella-pylib/src/: lib.rs
crates/maya-umbrella/src/: lib.rs  loader.rs  specimen.rs  virus_detector.rs
crates/maya-umbrella/src/loader/: file_loader.rs
crates/maya-umbrella/src/specimen/: text.rs
crates/maya-umbrella/src/virus_detector/: text_virus_detector.rs
crates/maya-umbrella/tests/: test_virus_detectors.rs
crates/maya-unmbrella/: Cargo.toml
dev/: get-pip-2.7.py
docs/: cross-platform-testing.md  docker-testing.md
maya/: userSetup.py
maya_umbrella/: __init__.py  _maya.py  cleaner.py  collector.py  constants.py  core.py  defender.py  filesystem.py  i18n.py  log.py  maya_funs.py  scanner.py  signatures.py  vaccine.py
maya_umbrella/_vendor/: README.rst  atomicwrites.pyi  six.py  vendor.txt
maya_umbrella/hooks/: delete_turtle.py  delete_unknown_plugin_node.py  fix_model_panel.py  fix_no_sceneName.py  fix_no_scene_name.py  fix_on_model_change_3dc.py
maya_umbrella/locales/: en_US.json  zh_CN.json
maya_umbrella/vaccines/: vaccine1.py  vaccine2.py  vaccine3.py  vaccine4.py
nox_actions/: codetest.py  lint.py  release.py  run_maya.py  run_test.py  utils.py
resources/: banner.psd  maya_umbrella.psd
scripts/: docker_test_setup.py  test_maya_docker_integration.py  test_python27_windows.bat  test_python27_windows.py  test_windows_python27_ci.py  translate_i18n.py
tests/: _test_runner.py  conftest.py  test_defender.py  test_defender_mocked.py  test_docker_integration.py  test_filesystem.py  test_i18n.py  test_imports.py  test_leukocyte_vaccine.py  test_scanner.py  test_vaccine2.py  test_vaccine3.py  test_vaccine4.py  test_vaccine4_comprehensive.py
tests/data/: mayaHIK.pres.mel  maya_2018.mel  maya_2020.mel  userSetup.mel  userSetup.py  userSetup1.mel  userSetup2.mel  userSetup3.mel  virus_mayaHIK.pres.mel  virus_maya_secure_system_2026.ma
tests/data/ja_JP/plug-ins/: mayaHIK.pres.mel
tests/data/zh_CN/plug-ins/: mayaHIK.pres.mel
tests/rust-lib-tests/: test_text_virus_detector.py
tests/virus/: 2024-4-30.ma  leukocyte_virus_sample.py  uifiguration.ma
