[tool.poetry]
name = "maya_umbrella"
version = "0.3.0"
description = "Check and fix maya virus."
homepage = "https://github.com/loonghao/maya_umbrella"
repository = "https://github.com/loonghao/maya_umbrella"
documentation = "https://github.com/loonghao/maya_umbrella"
keywords = ["notifiers", "python", "Maya", "dcc"]
authors = ["longhao <hal.long@outlook.com>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

packages = [
    { include = "maya_umbrella" },
]
[tool.poetry.build]
generate-setup-file = false

[tool.poetry.dependencies]
python = ">=2.7,<2.8 || >=3.6.0"

[tool.poetry.dev-dependencies]
nox = {version = "^2024.3.2", python = ">=3.8.1,<3.11"}

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.3.0"
tag_format = "v$version"
version_files = [
    "pyproject.toml:version",
    "maya_umbrella/__version__.py"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target_version = ['py36']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.nox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.isort]
profile = "black"
atomic = true
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
use_parentheses = true
src_paths = ["maya_umbrella", "test"]
filter_files = true
known_first_party = "maya_umbrella"

# Enforce import section headers.
import_heading_future = "Import future modules"
import_heading_stdlib = "Import built-in modules"
import_heading_thirdparty = "Import third-party modules"
import_heading_firstparty = "Import local modules"

force_sort_within_sections = true
force_single_line = true

# All project unrelated unknown imports belong to third-party.
default_section = "THIRDPARTY"
skip_glob = "*/docs/conf.py"
