[package]
name = "maya-umbrella-pylib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "maya_umbrella_rs"
crate-type = ["cdylib"]

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread"] }
lazy_static = "1"
maya-umbrella = { path = "../maya-umbrella" }

[dependencies.cpython]
version = "*"
default-features = false
features = ["python27-sys"]
