[package]
name = "maya-umbrella"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.10"
futures = "0.3"
tokio = { version = "1", features = [
    "fs",
    "io-util",
    "io-std",
    "macros",
    "rt-multi-thread",
] }
async-trait = "0.1"
bytes = "1"


[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread"] }
